2.6.8:

2006-05-10  Murray Cumming  <murrayc@murrayc.com

	* configure.in: Do not build examples/cellrenderercustom 
	because it needs too much #ifdefing when properties are 
	disabled. It remains as an example in cvs.

2006-04-06  Murray Cumming  <murrayc@murrayc.com>

	* tools/m4/Makefile_list_of_sources.am_fragment:
	* tools/m4/convert_base.m4: Removed this because it is a duplicate of 
	the one in glibmm/tools/m4, and it was masking it, preventing use of 
	improvements in that oen.
	* demos/gtk-demo/demo-common.cc:
	* demos/gtk-demo/example_iconview.cc:
	* demos/gtk-demo/example_images.cc:
	* demos/gtk-demo/example_pixbufs.cc:
	* demos/gtk-demo/example_textview.cc:
	* demos/gtk-demo/example_uimanager.cc:
	* demos/pixbuf-demo.cc:
	* examples/book/iconview/examplewindow.cc:
	* examples/book/input/main.cc:
	* examples/book/menus/main_menu/examplewindow.cc:
	* examples/book/menus/popup/examplewindow.cc:
	* examples/book/menus_and_toolbars/examplewindow.cc:
	* examples/exception/exceptiontest.cc:
	* gdk/src/pixbuf.ccg:
	* gdk/src/pixbuf.hg:
	* gdk/src/pixbufloader.ccg:
	* gdk/src/pixbufloader.hg:
	* gtk/gtkmm/treeview_private.cc:
	* gtk/src/aboutdialog.ccg:
	* gtk/src/assistant.ccg:
	* gtk/src/celllayout.ccg:
	* gtk/src/clipboard.ccg:
	* gtk/src/colorselection.ccg:
	* gtk/src/container.ccg:
	* gtk/src/entrycompletion.ccg:
	* gtk/src/filefilter.ccg:
	* gtk/src/iconview.ccg:
	* gtk/src/main.ccg:
	* gtk/src/menu.ccg:
	* gtk/src/menushell.ccg:
	* gtk/src/textiter.hg:
	* gtk/src/treedragsource.ccg:
	* gtk/src/treemodel.ccg:
	* gtk/src/treemodelfilter.ccg:
	* gtk/src/treeselection.ccg:
	* gtk/src/treesortable.ccg:
	* gtk/src/treeview.ccg:
	* gtk/src/uimanager.ccg:
	* gtk/src/uimanager.hg:
	* gtk/src/widget.ccg:
	* pango/src/fontset.ccg:
	* tests/main_with_options/main.cc: Added #ifdefed alternatives to fix the 
	build when GLIBMM_EXCEPTIONS_ENABLED is not defined.

2006-05-10  Murray Cumming  <murrayc@murrayc.com
