@@ -124,45 +124,77 @@ void Pixbuf::render_pixmap_and_mask(Glib::RefPtr<Pixmap>& pixmap_return,
   mask_return   = Glib::RefPtr<Gdk::Bitmap>::cast_dynamic(Glib::wrap((GdkPixmapObject*) pBitmap));
 }
 
+#ifdef GLIBMM_EXCEPTIONS_ENABLED
 void Pixbuf::save(const std::string& filename, const Glib::ustring& type)
+#else
+void Pixbuf::save(const std::string& filename, const Glib::ustring& type, std::auto_ptr<Glib::Error>& error)
+#endif //GLIBMM_EXCEPTIONS_ENABLED
 {
-  GError* error = 0;
-  gdk_pixbuf_savev(gobj(), filename.c_str(), type.c_str(), 0, 0, &error);
+  GError* gerror = 0;
+  gdk_pixbuf_savev(gobj(), filename.c_str(), type.c_str(), 0, 0, &gerror);
 
-  if(error)
-    Glib::Error::throw_exception(error);
+#ifdef GLIBMM_EXCEPTIONS_ENABLED
+  if(gerror)
+    ::Glib::Error::throw_exception(gerror);
+#else
+  if(gerror)
+    error = ::Glib::Error::throw_exception(gerror);
+#endif //GLIBMM_EXCEPTIONS_ENABLED
 }
 
+#ifdef GLIBMM_EXCEPTIONS_ENABLED
 void Pixbuf::save(const std::string& filename, const Glib::ustring& type,
                   const Glib::StringArrayHandle& option_keys,
                   const Glib::StringArrayHandle& option_values)
+#else
+void Pixbuf::save(const std::string& filename, const Glib::ustring& type,
+                  const Glib::StringArrayHandle& option_keys,
+                  const Glib::StringArrayHandle& option_values, std::auto_ptr<Glib::Error>& error)
+#endif //GLIBMM_EXCEPTIONS_ENABLED
 {
-  GError* error = 0;
+  GError* gerror = 0;
 
   gdk_pixbuf_savev(
       gobj(), filename.c_str(), type.c_str(),
       const_cast<char**>(option_keys.data()), const_cast<char**>(option_values.data()),
-      &error);
+      &gerror);
 
-  if(error)
-    Glib::Error::throw_exception(error);
+#ifdef GLIBMM_EXCEPTIONS_ENABLED
+  if(gerror)
+    ::Glib::Error::throw_exception(gerror);
+#else
+  if(gerror)
+    error = ::Glib::Error::throw_exception(gerror);
+#endif //GLIBMM_EXCEPTIONS_ENABLED
 }
 
+#ifdef GLIBMM_EXCEPTIONS_ENABLED
 void Pixbuf::save_to_buffer(gchar*& buffer, gsize& buffer_size,
                             const Glib::ustring& type,
                             const Glib::StringArrayHandle& option_keys,
                             const Glib::StringArrayHandle& option_values)
+#else
+void Pixbuf::save_to_buffer(gchar*& buffer, gsize& buffer_size,
+                            const Glib::ustring& type,
+                            const Glib::StringArrayHandle& option_keys,
+                            const Glib::StringArrayHandle& option_values, std::auto_ptr<Glib::Error>& error)
+#endif //GLIBMM_EXCEPTIONS_ENABLED
 {
-  GError* error = 0;
+  GError* gerror = 0;
 
   gdk_pixbuf_save_to_bufferv(
       gobj(), &buffer, &buffer_size,
       type.c_str(),
       const_cast<char**>(option_keys.data()), const_cast<char**>(option_values.data()),
-      &error);
+      &gerror);
 
-  if(error)
-    Glib::Error::throw_exception(error);
+#ifdef GLIBMM_EXCEPTIONS_ENABLED
+  if(gerror)
+    ::Glib::Error::throw_exception(gerror);
+#else
+  if(gerror)
+    error = ::Glib::Error::throw_exception(gerror);
+#endif //GLIBMM_EXCEPTIONS_ENABLED
 }
 
 Pixbuf::SListHandle_PixbufFormat Pixbuf::get_formats()
