@@ -198,7 +198,11 @@ public:
    * @throw Glib::FileError
    * @throw Gdk::PixbufError
    */
+  #ifdef GLIBMM_EXCEPTIONS_ENABLED
   void save(const std::string& filename, const Glib::ustring& type);
+  #else
+  void save(const std::string& filename, const Glib::ustring& type, std::auto_ptr<Glib::Error>& error);
+  #endif //GLIBMM_EXCEPTIONS_ENABLED
   _IGNORE(gdk_pixbuf_save)
 
   /** Save an image file.
@@ -241,10 +245,17 @@ gboolean gdk_pixbuf_save_to_callbackv   (GdkPixbuf  *pixbuf,
 
 */
 
+  #ifdef GLIBMM_EXCEPTIONS_ENABLED
   void save_to_buffer(gchar*& buffer, gsize& buffer_size,
                       const Glib::ustring& type,
                       const Glib::StringArrayHandle& option_keys,
                       const Glib::StringArrayHandle& option_values);
+  #else
+  void save_to_buffer(gchar*& buffer, gsize& buffer_size,
+                      const Glib::ustring& type,
+                      const Glib::StringArrayHandle& option_keys,
+                      const Glib::StringArrayHandle& option_values, std::auto_ptr<Glib::Error>& error);
+  #endif //GLIBMM_EXCEPTIONS_ENABLED
   _IGNORE(gdk_pixbuf_save_to_bufferv, gdk_pixbuf_save_to_buffer)
                                          
                                          
