@@ -29,16 +29,19 @@ static void SignalProxy_ActivateLink_gtk_callback(GtkAboutDialog* about, const g
 {
   Gtk::AboutDialog::SlotActivateLink* the_slot = static_cast<Gtk::AboutDialog::SlotActivateLink*>(data);
 
+  #ifdef GLIBMM_EXCEPTIONS_ENABLED
   try
   {
+  #endif //GLIBMM_EXCEPTIONS_ENABLED
     Gtk::AboutDialog* pCppAbout = Glib::wrap(about);
     (*the_slot)( *pCppAbout, Glib::convert_const_gchar_ptr_to_ustring(link) );
+  #ifdef GLIBMM_EXCEPTIONS_ENABLED
   }
   catch(...)
   {
     Glib::exception_handlers_invoke();
   }
-
+  #endif //GLIBMM_EXCEPTIONS_ENABLED
 }
 
 static void SignalProxy_ActivateLink_gtk_callback_destroy(void* data)
