@@ -55,29 +55,37 @@ static void SignalProxy_GetClear_gtk_callback_get(GtkClipboard*, GtkSelectionDat
 {
   SignalProxy_GetClear *const self = static_cast<SignalProxy_GetClear*>(data);
 
+  #ifdef GLIBMM_EXCEPTIONS_ENABLED
   try
   {
+  #endif //GLIBMM_EXCEPTIONS_ENABLED
     Gtk::SelectionData_WithoutOwnership cppSelectionData(selection_data);
     (self->slot_get_)(cppSelectionData, info);
+  #ifdef GLIBMM_EXCEPTIONS_ENABLED
   }
   catch(...)
   {
     Glib::exception_handlers_invoke();
   }
+  #endif //GLIBMM_EXCEPTIONS_ENABLED
 }
 
 static void SignalProxy_GetClear_gtk_callback_clear(GtkClipboard*, void* data)
 {
   SignalProxy_GetClear *const self = static_cast<SignalProxy_GetClear*>(data);
 
+  #ifdef GLIBMM_EXCEPTIONS_ENABLED
   try
   {
+  #endif //GLIBMM_EXCEPTIONS_ENABLED
     (self->slot_clear_)();
+  #ifdef GLIBMM_EXCEPTIONS_ENABLED
   }
   catch(...)
   {
     Glib::exception_handlers_invoke();
   }
+  #endif //GLIBMM_EXCEPTIONS_ENABLED
 
   delete self; // After this callback has been called, none of the 2 callbacks will be called again.
 
@@ -92,15 +100,19 @@ static void SignalProxy_Received_gtk_callback(GtkClipboard*, GtkSelectionData* s
 {
   const Gtk::Clipboard::SlotReceived* the_slot = static_cast<Gtk::Clipboard::SlotReceived*>(data);
 
+  #ifdef GLIBMM_EXCEPTIONS_ENABLED
   try
   {
+  #endif //GLIBMM_EXCEPTIONS_ENABLED
     Gtk::SelectionData cppSelectionData(selection_data, true /*take_copy=true*/);
     (*the_slot)(cppSelectionData);
+  #ifdef GLIBMM_EXCEPTIONS_ENABLED
   }
   catch(...)
   {
     Glib::exception_handlers_invoke();
   }
+  #endif //GLIBMM_EXCEPTIONS_ENABLED
 
   delete the_slot;
 }
@@ -126,16 +138,20 @@ static void SignalProxy_TargetsReceived_gtk_callback(GtkClipboard*, GdkAtom* ato
 {
   const Gtk::Clipboard::SlotTargetsReceived* the_slot = static_cast<Gtk::Clipboard::SlotTargetsReceived*>(data);
 
+  #ifdef GLIBMM_EXCEPTIONS_ENABLED
   try
   {
+  #endif //GLIBMM_EXCEPTIONS_ENABLED
     listStrings listTargets = util_convert_atoms_to_strings(atoms, n_atoms);
     (*the_slot)(listTargets);
     //I guess that GTK+ does a g_free of the GdkAtoms* array itself, so we do not need to. murrayc.
+  #ifdef GLIBMM_EXCEPTIONS_ENABLED
   }
   catch(...)
   {
     Glib::exception_handlers_invoke();
   }
+  #endif //GLIBMM_EXCEPTIONS_ENABLED
 
   delete the_slot; // the callback is only used once
 }
@@ -145,14 +161,18 @@ static void SignalProxy_TextReceived_gtk_callback(GtkClipboard*, const char* tex
 {
   const Gtk::Clipboard::SlotTextReceived* the_slot = static_cast<Gtk::Clipboard::SlotTextReceived*>(data);
 
+  #ifdef GLIBMM_EXCEPTIONS_ENABLED
   try
   {
+  #endif //GLIBMM_EXCEPTIONS_ENABLED
     (*the_slot)((text) ? Glib::ustring(text) : Glib::ustring());
+  #ifdef GLIBMM_EXCEPTIONS_ENABLED
   }
   catch(...)
   {
     Glib::exception_handlers_invoke();
   }
+  #endif //GLIBMM_EXCEPTIONS_ENABLED
 
   delete the_slot; // the callback is only used once
 }
@@ -161,14 +181,18 @@ static void SignalProxy_ImageReceived_gtk_callback(GtkClipboard*, GdkPixbuf* ima
 {
   const Gtk::Clipboard::SlotImageReceived* the_slot = static_cast<Gtk::Clipboard::SlotImageReceived*>(data);
 
+  #ifdef GLIBMM_EXCEPTIONS_ENABLED
   try
   {
+  #endif //GLIBMM_EXCEPTIONS_ENABLED
     (*the_slot)(Glib::wrap(image, true /* take_ref */));
+  #ifdef GLIBMM_EXCEPTIONS_ENABLED
   }
   catch(...)
   {
     Glib::exception_handlers_invoke();
   }
+  #endif //GLIBMM_EXCEPTIONS_ENABLED
 
   delete the_slot; // the callback is only used once
 }
