@@ -1,5 +1,14 @@
 2.6.8:
 
+2006-05-11  Murray Cumming  <murrayc@murrayc.com
+
+	* gdk/src/pixbuf.ccg:
+	* gdk/src/pixbuf.hg:
+	* gtk/gtkmm/treeview_private.cc:
+	* gtk/src/aboutdialog.ccg:
+	* gtk/src/clipboard.ccg: Added missing #ifdefs needed for use of 
+	--enable-api-exceptions=no with glibmm.
+
 2006-05-10  Murray Cumming  <murrayc@murrayc.com
 
 	* configure.in: Do not build examples/cellrenderercustom 
